--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1779,7 +1779,7 @@ input, select, textarea {
 	}
 
 		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
-			border-bottom: solid 2px #fff;
+			border-bottom: solid 2px rgb(255, 255, 255);
 			display: inline-block;
 			padding-bottom: 1em;
 			position: relative;
@@ -2555,7 +2555,7 @@ input, select, textarea {
 	}
 
 		.features li {
-			padding: 4em 4em 2em 6em ;
+			padding: 2em 4em 2em 6em ;
 			display: block;
 			position: relative;
 			text-align: left;
@@ -2606,9 +2606,9 @@ input, select, textarea {
 				display: block;
 				color: #00ffcc;
 				position: absolute;
-				left: 1.75em;
-				top: 2.75em;
-				font-size: 1.5em;
+				left: 0.5em;
+				top: 1.5em;
+				font-size: 3em;
 			}
 
 			.features li:nth-child(1) {
