--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2564,7 +2564,6 @@ input, select, textarea {
 
 			.features li:nth-child(1) {
 				background-color: rgba(0, 0, 0, 0.035);
-				text-align: left;
 			}
 
 			.features li:nth-child(2) {
@@ -3643,6 +3642,89 @@ input, select, textarea {
 body.is-touch #banner {
 	background-attachment: scroll;
 }
+
+/* Large */
+
+	@media screen and (max-width: 1280px) {
+
+		/* Banner */
+
+		#banner .content {
+			padding: 4.5em;
+		}
+	}
+
+/* Medium */
+
+	@media screen and (max-width: 980px) {
+
+		/* Banner */
+
+		#banner {
+			background-attachment: scroll;
+		}
+
+			#banner .goto-next {
+				height: 7em;
+			}
+
+			#banner .content {
+				padding: 9em 0;
+				text-align: center;
+			}
+
+				#banner .content header {
+					display: block;
+					margin: 0 0 2em 0;
+					text-align: center;
+				}
+
+				#banner .content .image {
+					margin: 0;
+				}
+	}	
+
+
+
+/* Small */	
+
+	@media screen and (max-width: 736px) {
+
+		/* Banner */
+
+		#banner {
+			box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
+			min-height: calc(100vh - 44px);
+		}
+
+			#banner:before {
+				height: calc(100vh - 44px);
+			}
+
+			#banner .content {
+				padding: 4.0625em 1.5em 4.875em 1.5em;
+			}
+
+				#banner .content header h2 {
+					font-size: 1.5em;
+				}
+
+				#banner .content .image {
+					height: 9em;
+					width: 9em;
+				}
+	}		
+
+/* XSmall */
+
+	@media screen and (max-width: 480px) {
+
+		/* Banner */
+
+			#banner .content {
+				padding: 3em 1.5625em 5.25em 1.5625em;
+			}
+		}
 
 /* CTA */
 
